compiler/tools/fpp-to-xml/test/duplicate_xml_file.ref.txt
fpp-to-xml
[ local path prefix ]/compiler/tools/fpp-to-xml/test/duplicate_xml_file.fpp: 5.1
struct S { x: U32 }
^
error: duplicate XML file SSerializableAi.xml
previous file would be generated here:
[ local path prefix ]/compiler/tools/fpp-to-xml/test/duplicate_xml_file.fpp: 2.3
  struct S { x: U32 }
  ^
